reviewable.k8s.io/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviewable
  labels:
    app: reviewable
    version: v1
spec:
  replicas: 2
  # selector defaults to template's labels
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: reviewable
        version: v1
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: docker-pull
      containers:
        - name: reviewable
          image: reviewable/enterprise:1338.2011
          resources:
            limits:
              cpu: 1
              memory: 2Gi
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /_ah/health
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop:
              httpGet:
                path: /_ah/stop
                port: 80
